Bug 75254 - FILESAVE: DOCX: PolyPolygon shape is not supported for DML (2010 schema) writing
Summary: FILESAVE: DOCX: PolyPolygon shape is not supported for DML (2010 schema) writing
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium major
Assignee: Rajashri
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2014-02-20 12:14 UTC by Rajashri
Modified: 2021-08-23 20:52 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Original file (356.05 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-20 12:14 UTC, Rajashri
Details
RT file (611.14 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2014-02-20 12:15 UTC, Rajashri
Details
Export by LO7.3 with DML enabled (324.83 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2021-08-16 13:41 UTC, Regina Henschel
Details
LO 75254 Polypolyline 047 resaved with DML enabled_word2010sp1.pdf (378.30 KB, application/pdf)
2021-08-19 11:00 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rajashri 2014-02-20 12:14:57 UTC
Created attachment 94427 [details]
Original file

a file contains a table with images inside it. After RT the file is showing blank. nothing is getting displayed.
PFA the file and RT file.
Comment 1 Rajashri 2014-02-20 12:15:40 UTC
Created attachment 94428 [details]
RT file
Comment 2 Commit Notification 2014-02-26 12:04:29 UTC
Nikhil Walvekar committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=3c0a7cf4f67720f2cca2c4eb543f838d5b644e7f

fdo#75254 Unsupported shape in DML writing was causing document corruption.



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 3 Nikhil Walvekar 2014-02-26 12:15:40 UTC
Issue was due to PolyPloygon shape. It is currently not supported for DML (2010) writing. Currently we ignore shapes which are not supported for DML writing.
Comment 4 Jorendc 2014-03-18 18:20:22 UTC
(In reply to comment #3)
> Issue was due to PolyPloygon shape. It is currently not supported for DML
> (2010) writing. Currently we ignore shapes which are not supported for DML
> writing.

I assume that PolyPolygon is the Acer logo at the top right on the first page?

I can confirm the table is preserved, tested using Windows 8.1 with LibreOffice Version: 4.3.0.0.alpha0+
Build ID: 87efec9cc27b18aa09e50c289b503ba1127eb0b8
TinderBox: Win-x86@39, Branch:master, Time: 2014-03-18_02:50:50
Comment 5 Regina Henschel 2021-08-16 13:41:19 UTC
Created attachment 174321 [details]
Export by LO7.3 with DML enabled

I'm investigating whether the exclusion of DML for polyPolygon-shape is still needed. The attached file was produced by LO7.3 with DML enabled. It shows well in LO 7.3 and in Word 365.

So question is, whether a Word 2010 can show this file.


The attachment 94428 [details] has the error, that there is no shape in <a:graphicData> and no path in VML. Word 365 cannot open that file.
Comment 6 Justin L 2021-08-19 11:00:57 UTC
Created attachment 174410 [details]
LO 75254 Polypolyline 047 resaved with DML enabled_word2010sp1.pdf

(In reply to Regina Henschel from comment #5)
> So question is, whether a Word 2010 can show this file.
PDF attached here was created by Word 2010 14.0.7166.5000 32bit.
Comment 7 Regina Henschel 2021-08-19 13:56:35 UTC
@Justin: Thank you for testing it with Word 2010. So I'll going to enable DML. That will be a new bug report.