fdo#75254 Unsupported shape in DML writing was causing document corruption.

Added a way to avoid DML export for un-supported shapes. We need to fix
those properly by adding proper support.

Change-Id: I0aeac1cc3b6e807a0427df9a9695446148d2ba38
Reviewed-on: https://gerrit.libreoffice.org/8202
Reviewed-by: Miklos Vajna <vmiklos@collabora.co.uk>
Tested-by: Miklos Vajna <vmiklos@collabora.co.uk>